--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,8 +1,44 @@
-
+ .fondo-negro {
+     --background: #121212;
+     color: #fff;
+ }
 .input{
     font-size: 300;
+    
+}
+.InciarSecionB {
+    --background: #1ED760;
+
+    color: #000000;
+
+    margin-top: 10px;
+    width: 337px;
+    height: 49px;
+
+}
+.Login {
+    --background: #535353;
+    margin-top: 10px;
+    width: 82px ;
+    height: 42px;
+    
 }
 
+ion-fab-button {
+    --background: black;
+}
+ion-text{
+    color: #fff;
+    
+    .InicioText{
+        
+        font-size: 16px;
+    }
+    .textoP{
+        font-size: 20px;
+
+    }
+}
 ion-item{
     --backgroud:#f1f1f1;
     border-radius: 10px;
