--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,46 +1,11 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar color="white">
-    <ion-buttons slot="end">
-        <ion-button (click)="takePicture()" fill="clear">
-          <ion-icon aria-hidden="true" name="add-circle-outline"></ion-icon>
-        </ion-button>
-      <ion-button color="dark">
-        <ion-icon (click)="logOut()" slot="icon-only" name="log-out-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <div id="container">
-    <div *ngIf="imageURL">
-      <img [src]="imageURL" alt="Imagen Capturada">
-    </div>
 
-  
 
-    <!-- Formulario para ingresar el comentario -->
-    <ion-item >
-      <div>
 
-      
-      <ion-avatar class="small-avatar"> <!-- Clase para controlar el tamaño del avatar -->
-      <img sizes="auto" src="https://picsum.photos/id/237/200/300" alt="">
-    </ion-avatar>
-      <ion-label position="floating">Comentario</ion-label>
-      <ion-input type="text" [(ngModel)]="comment"></ion-input>
-    </div>
-    </ion-item>
-
-    <!-- Botones de Cancelar y Enviar -->
-    <ion-row >
-      <ion-col>
-        <ion-button expand="block" color="danger" fill="clear" (click)="cancelComment()">Cancelar</ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button expand="block" color="success" fill="clear" (click)="sendComment()">Publicar Foto</ion-button>
-      </ion-col>
-    </ion-row>
-  </div>
-</ion-content>
-
+<ion-content class="fondo-negro">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">tab2</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  </ion-content>
