--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,62 +1,69 @@
+<ion-content [fullscreen]="true" class="fondo-negro">
+  <ion-fab slot="fixed" vertical="top" horizontal="start">
 
+    <ion-fab-button (click)="volverInicio()">
+      <ion-icon name="chevron-back-outline"></ion-icon>
 
-<ion-content [fullscreen]="true">
-  <div class="header">
-    <ion-title>Registro</ion-title>
-    <p class="subtitle">Registrate para ingresar </p>
-  </div>
+    </ion-fab-button>
 
-  <form [formGroup]="regForm" novalidate>
-    <div class="ion-padding">
+  </ion-fab>
+  <ion-grid>
 
-      <ion-item>
-        <ion-input formControlName="fullname" placeholder="Nombre" class="input"></ion-input>
-        <ion-icon name="person-outline"></ion-icon>
-      </ion-item>
-      <div *ngIf="regForm.controls?.['fullname'].touched && regForm.controls['fullname'].invalid">  
-       <ion-text *ngIf="errorControl.fullname.errors?.required">
-          Nombre invalido
+    <ion-text class="ion-text-center">
+      <p class="InicioText">Crear una cuenta</p>
+    </ion-text>
+    <form [formGroup]="regForm" novalidate>
+      <div class="ion-padding">
+        <ion-text>
+          <p class="textoP">¿Como te llamas?</p>
         </ion-text>
-      </div>
+        <ion-item>
+          <ion-input formControlName="fullname" placeholder="Nombre" class="input"></ion-input>
+          <ion-icon name="person-outline"></ion-icon>
+        </ion-item>
+        <div *ngIf="regForm.controls?.['fullname'].touched && regForm.controls['fullname'].invalid">
+          <ion-text *ngIf="errorControl.fullname.errors?.required">
+            Nombre invalido
+          </ion-text>
+        </div>
 
-      <ion-item>
-        <ion-input formControlName="email" placeholder="Correo" class="input"></ion-input>
-        <ion-icon name="person-outline"></ion-icon>
-      </ion-item>
-      <div *ngIf="regForm.controls?.['email'].touched && regForm.controls['email'].invalid">
-      <ion-text *ngIf="errorControl.email.errors?.required">
-        Correo invalido
-      </ion-text>
-      </div>
+        <ion-text>
+          <p class="textoP">¿Cual es tu correo?</p>
+        </ion-text>
+        <ion-item>
+          <ion-input formControlName="email" placeholder="Correo" class="input"></ion-input>
+          <ion-icon name="person-outline"></ion-icon>
+        </ion-item>
+        <div *ngIf="regForm.controls?.['email'].touched && regForm.controls['email'].invalid">
+          <ion-text *ngIf="errorControl.email.errors?.required">
+            Correo invalido
+          </ion-text>
+        </div>
 
-      <ion-item>
-        <ion-input  formControlName="password" placeholder="Contraseña"  type="password"></ion-input>
-        <ion-icon name="lock-closed-outline"></ion-icon>
-      </ion-item>
-      <div *ngIf="regForm.controls?.['password'].touched && regForm.controls['password'].invalid">
-        <ion-text *ngIf="errorControl.password.errors?.required">
+          <ion-text>
+            <p class="textoP">¿Cual es tu contraseña?</p>
+          </ion-text>
+        <ion-item>
+          <ion-input formControlName="password" placeholder="Contraseña" type="password"></ion-input>
+          <ion-icon name="lock-closed-outline"></ion-icon>
+        </ion-item>
+        <div *ngIf="regForm.controls?.['password'].touched && regForm.controls['password'].invalid">
+          <ion-text *ngIf="errorControl.password.errors?.required">
             Contraseña invalida
-        </ion-text>
+          </ion-text>
+        </div>
+
+
+
+
       </div>
-      
+      <ion-grid class="ion-text-center">
+        <ion-button shape="round" class="Login" (click)="signUp()">
+          Next
+        </ion-button>
+      </ion-grid>
 
 
-
-    </div>
-
-    <div class="header">
-      <ion-button (click)="toLogIn()" fill="clear">
-        <p class="subtitle">Ya estas registrado?</p>
-      </ion-button>
-    </div>
-
-    <ion-fab vertical="bottom" horizontal="end" style="margin-bottom: 30px;">
-    
-      <ion-fab-button (click)="signUp()">
-        <ion-icon name="arrow-forward-outline" ></ion-icon>
-      </ion-fab-button>
-
-    </ion-fab>
-
-  </form>
+    </form>
+  </ion-grid>
 </ion-content>
