--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,99 +1,7 @@
-
-
-<ion-content>
-  <ion-grid>
-    <ion-row >
-
-    <ion-row class="story-list" >
-      <ion-col class="scroll-horizontal" scrollY="true" >
-        <ion-row class="scroll-item">
-          <ion-avatar class="avatar-md">
-            <img src="https://picsum.photos/id/237/200/300" alt="">
-          </ion-avatar>
-            <ion-col class="item-label">
-              Tu Historia
-            </ion-col>
-        </ion-row>
-        <ion-row class="scroll-item" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11]">
-          <ion-col class="item-avatar">
-            <ion-avatar class="avatar-md has-update has-status">
-              <img [src]="'https://picsum.photos/300/300?random=' + i" alt="">
-            </ion-avatar>
-          </ion-col>
-          
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row class="post-list" >
-      <ion-col class="post-item" *ngFor="let item of items; let index">
-        <ion-row  class="post-header">
-          <ion-col size="auto">
-            <ion-avatar class="avatar-sm">
-              <img src="https://picsum.photos/seed/{{index}}/200/300" alt="">
-            </ion-avatar>
-          </ion-col>
-          <ion-col >
-            <br>
-            <strong> &#64; Usuario</strong>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-icon name="ellipsis-horizontal"></ion-icon>
-          </ion-col>
-        </ion-row>
-        <ion-row class="post-media">
-          <img [src]="'https://picsum.photos/300/300?random=' + index" alt="" />
-        </ion-row>
-        <ion-row class="post-actions">
-          <ion-col>
-            <ion-button size="small" fill="clear" color="dark">
-              <ion-icon [name]="isLiked? 'heart' : 'heart-outline' " color="danger"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="clear" color="dark">
-              <ion-icon slot="icon-only" name="chatbubble-outline"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="clear" color="dark">
-              <ion-icon slot="icon-only" name="send-outline"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-button size="small" fill="clear" color="dark">
-              <ion-icon slot="icon-only" name="bookmark-outline"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-        <ion-row class="post-stats">
-          <strong>20 likes</strong>
-        </ion-row>
-        <ion-row class="post-comments">
-          <div class="comment-item">
-            <span class="username">Usuario</span>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <a href=""
-              class="hash-tag">#sufro</a> <a href="" class="hash-tag">#sindormir</a> <a href=""
-              class="hash-tag">#quierodormir</a> <a href="" class="hash-tag">#pasarMateria</a>
-          </div>
-          <div class="comment-expander text-muted">View all 35 comments</div>
-       
-          <ion-row >
-            <ion-col size="auto">
-              <ion-avatar class="avatar-xs">
-                <img src="https://picsum.photos/id/237/200/300" alt="">
-              </ion-avatar>
-            </ion-col>
-
-
-            <ion-col (click)="openCommentModal()">
-              <div class="text-muted text-sm">
-              <ion-button (click)="toSignup()" fill="clear">
-                <p class="subtitle">Hacer un comentario</p>
-              </ion-button>
-            </div>
-            </ion-col>
-           
-          </ion-row>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+<ion-content class="fondo-negro">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">tab2</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  </ion-content>
