--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,38 +1,57 @@
-.profile-header {
-    padding: 8px;
-}
+.fondo-negro {
+    --background: linear-gradient(180deg, #00667B 0%, #002F38 49.48%, #101010 89.06%, #101010 95.31%);
+    color: #fff;
 
-.profile-stats {
-    text-align: center;
-
-    .stats-number {
-        font-size: 17px;
-        font-weight: 700;
+    .avatar {
+        margin: auto;
+        width: 100px;
+        height: 100px;
     }
 
-    .stats-label {
-        font-size: 13px;
+    .botonF {
+
+        --background: #3E3F3F;
+        --color:#ffffff;
+    }
+
+    .textoPeque {
+        font-size: 10px;
+        color: #9fa7a7;
+    }
+
+  
+
+    .centro {
+        text-align: center;
+    }
+
+    .fuente {
+        font-family: Cabin;
+        font-size: 19px;
+        font-style: italic;
+        font-weight: 400;
+        line-height: 23px;
+        letter-spacing: 0.01em;
+
+    }
+
+    .textoPlaylist {
+        width: 93px;
+        height: 30px;
+        top: 399px;
+        left: 7px;
+        text-align: start;
+    }
+    .bontonCrear{
+        color: #002F38;
     }
 }
 
-.hash-tag {
-    text-decoration: none;
-    margin-right: 4px;
+ion-fab-button {
+    --background: none;
+    --box-shadow: none;
 }
-
-.profile-info {
-    line-height: 1.5;
-    padding-bottom: 0;
-}
-
-.post-grid {
-    ion-row {
-        --ion-grid-column-padding: 0px;
-    }
-    
-    .post-item {
-        width: 100%;
-        height: 0;
-        padding-top: 100%;
-    }
+ion-button{
+                --color: #1ED760;
+        
 }
