--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,21 +1,24 @@
+
+
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
       <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
-      
+      <ion-text> Inicio </ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="add-circle-outline"></ion-icon>
-      
+      <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
+      <ion-text> Buscar </ion-text>
     </ion-tab-button>
-<ion-tab-button tab="tab3" href="/tabs/tab3">
-  <ion-avatar class="small-avatar"> <!-- Clase para controlar el tamaño del avatar -->
-    <img sizes="auto" src="https://picsum.photos/id/237/200/300" alt="">
-  </ion-avatar>
-</ion-tab-button>
+
+    <ion-tab-button tab="tab3" href="/tabs/tab3">
+      <ion-icon aria-hidden="true" name="book-outline"></ion-icon>
+      <ion-text> Mi libreria </ion-text>
+    </ion-tab-button>
 
   </ion-tab-bar>
 
 </ion-tabs>
+
