--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -227,7 +227,7 @@
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #121212;
 
     --ion-tab-bar-background: #1f1f1f;
 
